# tdd_embeddedc

./: CMakeLists.txt  README.md
doc/: CircularBufferTestList.txt  CircularBufferTestList.txt~
include/circular_buffer/: circular_buffer.h  circular_buffer.h~
include/led_driver/: led_driver.h
include/util/: RuntimeError.h
mocks/: CMakeLists.txt  RuntimeErrorStub.c  RuntimeErrorStub.h
src/: CMakeLists.txt
src/circular_buffer/: circular_buffer.c  circular_buffer.c~
src/led_driver/: led_driver.c
tests/: CMakeLists.txt  RunAllTests.cpp
tests/circular_buffer/: circular_buffer_test.cpp
tests/led_driver/: led_driver_test.cpp
tests/util/: SprintfTest.cpp
